--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: GradientDescent
+subtitle: The first step is to establish that something is possible; then probability will occur
 ---
 
 <div class="posts-list">
