--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: GradientDescent
+title: GradientDescent to Here
 subtitle: The first step is to establish that something is possible; then probability will occur
 ---
 
