--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: page
 title: GradientDescent to Here
 subtitle: The first step is to establish that something is possible; then probability will occur
+bigimg: /img/giphy.gif
 ---
 
 <div class="posts-list">
