edit address in footer

--- a/openx/index.html
+++ b/openx/index.html
@@ -158,6 +158,11 @@
                     <div class="mdl-logo">
                         © OPENX
                     </div>
+                    <ul class="mdl-mini-footer__link-list">
+                        <li>
+                            <i class="material-icons">place</i>대구시 북구 살롱
+                        </li>
+                    </ul>
                 </div>
                 <div class="mdl-mini-footer__right-section">
                     <ul class="mdl-mini-footer__link-list">
@@ -172,10 +177,6 @@
                                 <i class="material-icons">contact_mail</i>
                                 &nbsp;jihobak0@gmail.com
                             </a>
-                        </li>
-                        <li>
-                            <i class="material-icons">place</i>
-                            <a href="#">&nbsp;대구시 북구 살롱</a>
                         </li>
                     </ul>
                     <!--
