edit address in footer

--- a/openx/index.html
+++ b/openx/index.html
@@ -156,11 +156,12 @@
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
                     <div class="mdl-logo">
-                        © OPENX
+                        © OPENX&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
                     <ul class="mdl-mini-footer__link-list">
                         <li>
-                            <i class="material-icons">place</i>대구시 북구 살롱
+                            <i class="material-icons">place</i>
+                            &nbsp;대구시 북구 복합문화살롱
                         </li>
                     </ul>
                 </div>
